[package]
name = "toy_tracer"
version = "0.1.0"
authors = ["Kunal Chandan <kunal_chandan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston_window = "0.105.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.70.0"

image = "0.22.3"
imageproc = "0.19.2"

nalgebra = "0.19.0"