[package]
name = "ToyTracer"
version = "0.0.1"
authors = ["Kunal Chandan <kchandan@uwaterloo.ca>"]
edition = "2021"

description = "A basic ray tracer with limited functionality."

license = "GPL-3.0"
license-file = "LICENSE"

readme = "README.md"
repository = "https://github.com/kunalchandan/ToyTracer/"

keywords = ["graphics", "3d", "raytracing"]
categories = ["graphics", "rendering", "simulation"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53"
piston_window = "0.128"
piston2d-graphics = "0.43"
pistoncore-glutin_window = "0.71"
piston2d-opengl_graphics = "0.82"

image = "0.24"
imageproc = "0.23"

nalgebra = "0.32"